# kinivi_gesture_train

./: README.md  version.txt
test-kinivi-gesture/: camera_prediction.py  pyproject.toml  storage_prediction.py
train-point-history-classifier/: add_point_history_data.ipynb  point_history_classifier.py  point_history_classifier_label.csv  pyproject.toml  train.py
train-point-history-classifier/2025-05-02-15-02-43/: point_history.csv  point_history_classifier_label.csv
train-point-history-classifier/2025-05-02-15-23-08/: point_history.csv  point_history_classifier_label.csv
train-point-history-classifier/2025-05-02-15-32-08/: point_history.csv  point_history_classifier_label.csv
train-point-history-classifier/2025-05-02-20-44-42/: point_history.csv  point_history_classifier_label.csv
train-point-history-classifier/2025-05-02-21-01-26/: point_history.csv  point_history_classifier_label.csv
train-point-history-classifier/2025-05-02-21-50-08/: point_history_classifier_label.csv
train-point-history-classifier/2025-05-03-11-01-46/: point_history_classifier_label.csv
train-point-history-classifier/2025-05-06-12-55-24/: point_history.csv
train-point-history-classifier/2025-05-06-16-15-40/: point_history.csv  point_history_classifier_label.csv
train-point-history-classifier/isolated_gesture_sets/: _analysis.ipynb  _assembler.ipynb  _combine_sets.ipynb  _point_history_viewer.ipynb  _relabel.ipynb  _set_cutter.ipynb  _synthetic_data_creater.ipynb  analysis.ipynb  assembler.ipynb  diverse_synthetic_ccw_2.csv  diverse_synthetic_ccw_2_combined.csv  (+61 more)
(+129 files in other folders)
