[project]
name = "test-kinivi-gesture"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew",email = "matthew.miglio@magna.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (==4.11.0.86)",
    "numpy (==1.26.4)",
    "mediapipe (==0.10.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
