[project]
name = "train-point-history-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew",email = "matthew.miglio@magna.com"}
]
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
